GWW-65 - Fix mobile menu being hidden behind content

--- a/great-western-wine-theme/assets/scss/components/foundation/global/_global.scss
+++ b/great-western-wine-theme/assets/scss/components/foundation/global/_global.scss
@@ -15,6 +15,8 @@
     }
 
     body {
+        padding-top: 106px; // 2
+
         @include breakpoint("medium") {
             padding-top: 0;
         }
